--- a/app/src/main/res/layout/activity_employer_register.xml
+++ b/app/src/main/res/layout/activity_employer_register.xml
@@ -9,7 +9,7 @@ android:paddingBottom="@dimen/activity_vertical_margin"
 android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="com.example.babu.jobsandesh.employer.employerRegisterActivity">
+tools:context="com.example.babu.jobsandesh.employer.EmployerRegisterActivity">
 
 <TextView
     android:layout_width="match_parent"
@@ -17,50 +17,53 @@ tools:context="com.example.babu.jobsandesh.employer.employerRegisterActivity">
     android:text="EMPLOYER REGISTRATION"
     android:textAlignment="center"
     android:textSize="20sp"
-    android:textColor="#000000" />
+    android:textColor="@color/black"
+    android:id="@+id/tv_emp_reg_header"/>
 
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:inputType="textPersonName"
+        android:hint="Name"
+        android:id="@+id/et_emp_name" />
+<EditText
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/ten_dp"
+    android:hint="Enter Company Name"
+    android:id="@+id/et_emp_company_name" />
 
 <EditText
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="25dp"
-    android:hint="Enter Name"
-    android:id="@+id/editTextName" />
-
-
-
-<EditText
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:hint="Choose Username"
-    android:id="@+id/editTextUserName" />
-
-
+    android:layout_marginTop="@dimen/ten_dp"
+    android:inputType="textEmailAddress"
+    android:hint="Enter username"
+    android:id="@+id/et_emp_username" />
 
 <EditText
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:inputType="textPassword"
-    android:hint="Choose Password"
-    android:layout_marginTop="10dp"
-    android:id="@+id/editTextPassword" />
-
+    android:hint="Enter Password"
+    android:layout_marginTop="@dimen/ten_dp"
+    android:id="@+id/et_emp_password" />
 
 <EditText
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:inputType="textEmailAddress"
-    android:layout_marginTop="10dp"
-    android:hint="Enter E-mail"
-    android:id="@+id/editTextEmail" />
+    android:inputType="textPassword"
+    android:layout_marginTop="@dimen/ten_dp"
+    android:hint="Confirm Password"
+    android:id="@+id/et_emp_cnfpassword" />
 
 <Button
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="Register"
-    android:textColor="@color/textColorPrimary"
-    android:background="#455a64"
+    android:textColor="@color/whitetextColor"
+    android:background="@color/btn_background_color"
     android:layout_marginTop="30dp"
-    android:id="@+id/buttonRegister" />
+    android:id="@+id/btn_emp_register" />
 </LinearLayout>
