--- a/app/src/main/res/layout/activity_jobseeker_login.xml
+++ b/app/src/main/res/layout/activity_jobseeker_login.xml
@@ -1,76 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_login"
+    android:id="@+id/activity_jobseeker_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.babu.jobsandesh.jobseeker.LoginActivity"
+    tools:context="com.example.babu.jobsandesh.jobseeker.JobseekerLoginActivity"
     android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="JOBSEEKER LOGIN"
-            android:textSize="30sp"
+            android:textSize="@dimen/header_txt_size"
             android:textAlignment="center"
-            android:textColor="#000000"/>
-
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberPassword"
-            android:layout_marginTop="20dp"
-            android:id="@+id/etseek_username"
-            android:hint="username"/>
+            android:textColor="@color/black"/>
 
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:id="@+id/editseekpassword"
+            android:hint="Username"
+            android:id="@+id/et_seek_username"/>
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:inputType="textPassword"
             android:hint="Password"
-            />
+            android:id="@+id/et_seek_password" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical">
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:layout_marginTop="20dp"
-                android:onClick="insert"
-                android:textColor="@color/textColorPrimary"
-                android:background="#455a64"
-                android:id="@+id/bt_login" />
+                android:textColor="@color/whitetextColor"
+                android:background="@color/btn_background_color"
+                android:id="@+id/bt_seek_login" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Register"
-                android:textColor="@color/textColorPrimary"
-                android:onClick="insert"
+                android:textColor="@color/whitetextColor"
                 android:layout_marginTop="20dp"
-                android:background="#455a64"
-                android:id="@+id/bt_registerpage" />
+                android:background="@color/btn_background_color"
+                android:id="@+id/bt_reg_activity" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login Using G+ google"
-                android:textColor="@color/textColorPrimary"
-                android:onClick="insert"
-                android:id="@+id/bt_loginemail"
-                android:background="#b7171c"
-                android:layout_marginTop="20dp"/>
+                android:text="SKIP LOGIN >>>"
+                android:onClick="skip"
+                android:textColor="@color/whitetextColor"
+                android:background="@color/google_btn_bgcolor"
+                android:layout_marginTop="20dp"
+                android:id="@+id/bt_skip"/>
         </LinearLayout>
 
 </LinearLayout>
