--- a/app/src/main/res/layout/fragment_file_.xml
+++ b/app/src/main/res/layout/fragment_file_.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.babu.jobsandesh.tabfragment.file_Fragment">
+    tools:context="com.example.babu.jobsandesh.jstabfragment.File_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
