--- a/app/src/main/res/layout/fragment_off_campus_.xml
+++ b/app/src/main/res/layout/fragment_off_campus_.xml
@@ -1,14 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.babu.jobsandesh.tabfragment.offCampus_Fragment">
+    tools:context="com.example.babu.jobsandesh.jstabfragment.OffCampus_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="All Offcampus related information search here"
-        android:textSize="50dp"/>
+        android:id="@+id/jobcontainer">
+    </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+</LinearLayout>
