--- a/app/src/main/res/layout/fragment_posted_job.xml
+++ b/app/src/main/res/layout/fragment_posted_job.xml
@@ -2,13 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.babu.jobsandesh.jstabfragment.WalkinFragment">
+    tools:context="com.example.babu.jobsandesh.emptabfragment.PostedJobFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="All Walkin related information search here"
-        android:textSize="50dp"/>
+        android:text="POSTED Job Here" />
 
 </FrameLayout>
