--- a/app/src/main/res/layout/fragment_off_campus_.xml
+++ b/app/src/main/res/layout/fragment_off_campus_.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.babu.jobsandesh.jstabfragment.OffCampus_Fragment">
+    tools:context="com.example.babu.jobsandesh.jstabfragment.AllPost_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
