--- a/app/src/main/res/layout/fragment_walkin.xml
+++ b/app/src/main/res/layout/fragment_walkin.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.babu.jobsandesh.jstabfragment.WalkinFragment">
+    tools:context="com.example.babu.jobsandesh.jstabfragment.SavedPostFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
